samples/_failures_safe/1761289129_2ef5bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d75cef3e.c: In function ‘main’:
./samples/SAFE/__tmp_d75cef3e.c:173:12: error: missing terminating " character
  173 |     printf("\nTokens from stack (reverse order
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d75cef3e.c:173:5: error: expected expression at end of input
  173 |     printf("\nTokens from stack (reverse order
      |     ^~~~~~
./samples/SAFE/__tmp_d75cef3e.c:173:5: error: expected declaration or statement at end of input
